# constellation

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PROJECT  README.md  crd-design.md  go.mod  go.sum  renovate.json  thoughts.md
.github/workflows/: ci.yaml  ci.yml  release.yml
api/v1alpha1/: groupversion_info.go  healthcheck_types.go  zz_generated.deepcopy.go
backlog/: config.yml
backlog/tasks/: task-001 - In-cluster-service-healthchecks-dashboard.md
charts/constellation/: Chart.yaml  README.md  values.schema.json  values.yaml
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: healthcheck_admin_role.yaml  healthcheck_editor_role.yaml  healthcheck_viewer_role.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: blog-healthcheck.yaml  health_v1alpha1_healthcheck.yaml  kustomization.yaml
docs/: functional-tests.md  health-persistence-design.md  websocket-design.md
frontend/: index.html  package-lock.json  package.json  state.json  vite.config.ts
frontend/src/: App.css  App.tsx  App.vue  Dashboard.tsx  ResourceNode.ts  ResourceTree.tsx  index.css  style.css  test.tsx  types.ts
internal/cache/: cache.go  cache_test.go
internal/server/: server.go
src/: controller.rs  http.rs  lib.rs  main.rs  router.rs  server.rs  watcher.rs
tests/: functional_tests.rs
(+83 files in other folders)
