[package]
edition = "2024"
name = "constellation"
version = "0.1.0"

[dependencies]
async-stream = "0.3"
axum = {version = "0.8.4", features = ["macros", "ws"]}
chrono = "0.4.41"
futures = "0.3.31"
gateway-api = "0.16.0"
k8s-openapi = {version = "0.25.0", features = ["latest"]}
kube = {version = "1.1.0", features = ["runtime", "derive"]}
reqwest = {version = "0.12", features = ["json"]}
serde = "1.0.219"
serde_json = "1.0"
serde_yaml = "0.9"
testcontainers = {version = "0.25", features = ["blocking"]}
testcontainers-modules = {version = "0.13.0", features = ["k3s"]}
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1", features = ["sync"]}
tokio-test = "0.4"
tower = "0.5.2"
tower-http = {version = "0.6.5", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
functional-tests = []
